--- a/src/component/Wordle/WordleTile/WordleTile.scss
+++ b/src/component/Wordle/WordleTile/WordleTile.scss
@@ -7,6 +7,11 @@
     margin-bottom: .25rem;
     text-transform: uppercase;
 
+    @media only screen and (max-width: 375px) {
+        width: 50px;
+        height: 50px;
+    }
+
     &__inner {
         position: relative;
         width: 100%;
