--- a/src/component/Wordle/WordleTile/WordleTile.scss
+++ b/src/component/Wordle/WordleTile/WordleTile.scss
@@ -12,6 +12,13 @@
         height: 50px;
     }
 
+    &--shake {
+        animation: shake 0.7s cubic-bezier(.36,.07,.19,.97) both;
+        transform: translate3d(0, 0, 0);
+        backface-visibility: hidden;
+        perspective: 1000px;
+    }
+
     &__inner {
         position: relative;
         width: 100%;
@@ -60,4 +67,22 @@
 
     }
 
+}
+
+@keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+    
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+  
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
+    }
 }
